using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class DefaultAnimParameters
{
	public static string Idle  	 = "idle";
	public static string Walk 	 = "walk";
	public static string Run     = "run";
	public static string Attack  = "attack";
	public static string AtkIdle = "atkIdle";
	public static string Vanish  = "vanish";
	public static string Rush    = "rush";
	public static string Hurt 	 = "hurt";
	public static string Dead 	 = "die";
}